// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button block 1`] = `
<button
  aria-disabled="false"
  class="zs-button zs-button--default zs-button--md zs-button--radius zs-button--block"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button disabled 1`] = `
<button
  aria-disabled="true"
  class="zs-button zs-button--default zs-button--md zs-button--radius zs-button--disabled"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button ghost 1`] = `
<button
  aria-disabled="false"
  class="zs-button zs-button--default zs-button--md zs-button--radius zs-button--ghost"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button href and target 1`] = `
<a
  aria-disabled="false"
  class="zs-button zs-button--default zs-button--md zs-button--radius zs-button--link"
  href="https://zson-mobile.design"
  target="_blank"
>
  <span>
    foo
  </span>
</a>
`;

exports[`Button htmlType 1`] = `
<button
  aria-disabled="false"
  class="zs-button zs-button--default zs-button--md zs-button--radius"
  type="submit"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button icon 1`] = `
<button
  aria-disabled="false"
  class="zs-button zs-button--default zs-button--md zs-button--radius"
  type="button"
>
  <div
    class="zs-button__content"
  >
    <img
      alt=""
      src="https://zarm.design/images/logo.ce68565d.svg"
    />
    <span>
      foo
    </span>
  </div>
</button>
`;

exports[`Button loading 1`] = `
<button
  aria-disabled="false"
  class="zs-button zs-button--default zs-button--md zs-button--radius zs-button--loading"
  type="button"
>
  <div
    class="zs-button__content"
  >
    <span
      class="zs-activity-indicator zs-activity-indicator--circular"
    >
      <svg
        viewBox="31 31 62 62"
      >
        <circle
          cx="62"
          cy="62"
          fill="none"
          r="28.5"
          style="stroke-width:5"
        />
      </svg>
    </span>
    <span>
      foo
    </span>
  </div>
</button>
`;

exports[`Button renders correctly 1`] = `
<button
  aria-disabled="false"
  class="zs-button zs-button--default zs-button--md zs-button--radius"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button shape is radius 1`] = `
<button
  aria-disabled="false"
  class="zs-button zs-button--default zs-button--md zs-button--radius"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button size 1`] = `
<button
  aria-disabled="false"
  class="zs-button zs-button--default zs-button--lg zs-button--radius"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;

exports[`Button theme 1`] = `
<button
  aria-disabled="false"
  class="zs-button zs-button--primary zs-button--md zs-button--radius"
  type="button"
>
  <span>
    foo
  </span>
</button>
`;
